--- a/src/app/i18n/locales/en/common.json
+++ b/src/app/i18n/locales/en/common.json
@@ -6,7 +6,7 @@
     "contactUs": "Contact Us"
   },
   "hero":{  
-   "title": "The Little Cuban Corner",
+   "title": "El Rinconcito Cubano",
     "subtitle": "Authentic cuisine celebrating heritage and passion.",
     "button": "View Menu"
   }
